src/test/ui/parser/unclosed_delim_mod.stderr
error: incorrect close delimiter: `}`
  --> $DIR/unclosed_delim_mod.rs:7:1
   |
LL | pub fn new() -> Result<Value, ()> {
   |                                   - close delimiter possibly meant for this
LL |     Ok(Value {
   |       - un-closed delimiter
LL |     }
LL | }
   | ^ incorrect close delimiter

error: aborting due to previous error

