src/test/ui/parser/unclosed_delim_mod.rs
pub struct Value {}
pub fn new() -> Result<Value, ()> {
    Ok(Value {
    }
}
//~^ ERROR incorrect close delimiter
